styles/style.css
/* ... */
/*
-----------------------------
BARRA DE NAVEGACION
-----------------------------
*/


nav {
    background-color: #025255;
    margin: 0%;
    width: 100%;
    overflow: visible;
    box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
    -webkit-box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
    -moz-box-shadow: 0px 8px 9px -8px rgba(0,0,0,0.75);
}

nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    list-style: none;
    padding: 0;
    margin: 0;
}

nav > ul {
    position: relative;
}

nav a {
    color: white;
    font-family: 'Gotham', sans-serif;
    text-decoration: none;
    padding: 1em;
}

nav ul li {
    transition:all 1s;
    padding: 1em;
    padding-inline: initial;
}

.navbarDropOption ul {
    display: none;
    flex-direction: column;
    justify-content: space-between;
    background-color: #025255;
    margin-top: 1em;
    padding: 0%;
    position: absolute;
    animation-name: opacity;
    animation-duration: 1s;
    width: max-content;
}

.navbarDropOption li {
    text-align: center;
    width: 100%;
    background-color: #5b2b19;
    transition: all 0.25s;
}

.navbarDropOption:hover > ul, .navbarDropOption ul:hover {
    display: flex;
}

nav li:hover {
    transform: scale(1.1);
    background-color: #a04928;
}

.navbarDropOption > ul > li:hover {
    background-color: #a04928;
}

@keyframes opacity {
   0% {opacity: 0};
  100% {opacity: 1};
}

#hamburgerMenu {
    display: none;
    cursor: pointer;
    position: absolute;
    width: 30px;
    height: 35px;
    margin: 0;
    opacity: 0;
}

label[for=hamburgerMenu] {
    display: none;
    border-radius: 3px;
    background: #009dda;
    position: relative;
    height: 5px;
    width: 30px;
    margin: 1em 0;
    cursor: pointer;
}

label[for=hamburgerMenu]:before {
    border-radius: 3px;
    background: #d0244a;
    content: '';
    position: absolute;
    top: -10px;
    left: 0;
    width: 30px;
    height: 5px;
}

label[for=hamburgerMenu]:after {
    border-radius: 3px;
    background: #fcc444;
    content: '';
    position: absolute;
    left: 0;
    top: 10px;
    width: 30px;
    height: 5px;
}

@media (max-width:708px) {
    nav {
        width: auto;
        display: flex;
        height: auto;
        flex-direction: column;
        padding-left: 10%;
        margin: 0;
    }

    li.navbarDropOption {
       width: 11ch;
    }

    nav li:hover {
        background-color: #a04928;
    }

    .navbarDropOption > ul {
        margin-left: 11ch;
        margin-top: -2em;
        background-color: #5b2b19
    }

    .navbarDropOption > ul > li:hover {
        background-color: #a04928;
    }

    nav ul {
        flex-direction: column;
        align-items: flex-start;
    }

    #hamburgerMenu {
        display: inline-block;
    }

    label[for=hamburgerMenu] {
        display: inline-block;
    }

    nav #hamburgerMenu:not(:checked) ~ ul {
        display: none;
    }
}

/*
-----------------------------
BODY osea MAIN
-----------------------------
*/
main {
    margin: 0 10%;
}

main h2 {
    color: #009dda;
    text-align: center;
}

/*
-----------------------------
FORMULARIO
-----------------------------
*/

.formulario {
    display: flex;
    flex-direction: column;
    font-family: 'gotham','sans-serif';
    align-items: center;
}


.formulario form {
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: hidden;
}

.formulario h2 {
    color: #009dda;
    align-content: end;
}

.formulario form label {
    margin-top: 10px;
    margin-bottom: 5px;
    font-size: small;
}

form input[type="submit"] {
    margin-top: 10px;
    margin-bottom: 5px;
    width: fit-content;
    padding: 10px;
    align-self: end;
    font-weight: bold;
    background-color: #025255;
    color: white;
    border: 0;
    cursor: pointer;  
    transition: all 1s;
    border-radius: 0px 20px 20px 20px;
}




form input[type="submit"]:hover{
    transform: translateY(-7px);
}




/*
-----------------------------
NOTICIAS
-----------------------------
*/
.noticias {
    float: left;
    width: 50%;
}
.noticias small {
    float: initial;
    color: #a04928;
}
.noticias li {
    list-style: none;
    padding-bottom: 3em;
}
.noticias .vermas {
    float: right;
    margin: 1em 0;
}

.noticias h2 {
    text-align: center;
    color: #009dda;
}

.noticias ul {
    list-style: none;
    overflow-y: auto;
    padding-left: initial;
    margin: 0;
    height: 300px;
}

main.noticias ul {
    height: auto;
}

.noticias a {
    text-decoration: none;
}

.noticias article {
    min-height: 150px;
}

.noticias > ul > li h3 + small {
    display: block;
    margin-bottom: 15px;
}

.noticias > ul > li h3 {
    background-color: #eef1ef;
    color: #025255;
    margin: 15px 0 0 0;
}

.noticias > ul > li:first-child h3 {
    margin-top: 0;
}

.noticias img {
    width: 100px;
    height: 100px;
    float: left;
    margin: 0 0.75em 0.75em 2em;
}

.noticias p {
    color: #025255;
    font-size: 18px;
    vertical-align: text-top;
    margin: 0 1em;
}

main.noticias {
    float: unset;
    width: auto;

}

.noticias ul li:nth-child(even) article img {
    float: right;
    margin: 0 2em 0.75em 0.75em;
}

.noticias ul li:nth-child(even) article h3 {
    text-align: end;
}

.noticias ul li:nth-child(even) article h3 + small {
    text-align: end;
}

.noticias ul li:nth-child(even) article .vermas {
    float: left;
}

.noticias ul li:nth-child(even) article p {
    color: #718839;
}

@media (max-width:990px) {
    .noticias {
        float: none;
        width: 100%;
    }
}

/*
-----------------------------
Donde nos podés encontrar
-----------------------------
*/
.ubicacion {
    float: right;
    text-align: center;
    width: auto;
}

.ubicacion h2 {
    text-align: center;
    color: #009dda;
}
.ubicacion iframe {
    align-self: center;
}
/* ... */

